more spacing + button bug

--- a/components/UI/button.module.scss
+++ b/components/UI/button.module.scss
@@ -77,6 +77,7 @@
   .outline:hover,
   .outline:active {
     box-shadow: none;
+    background-color: transparent;
     letter-spacing: 2px;
     transform: none;
   }
